# ilim_jobs

./: .envexample  .gitignore  flutter_service_worker.js  go.mod  go.sum  index.html  main.dart.js  main.go  main.py  pyproject.toml  version.json
.github/workflows/: deploy.yml  deploy_bot.yml  flutter.yml  flutter_build.yml  go.yml  go_deploy.yml  publish_to_dockku.yaml
assets/: AssetManifest.json  NOTICES
assets/assets/initial%20data/: comments.json  posts.json
conf/: jwt.go
dataloader/: jobs.json  main.py
db/: connector.go  schemeUpdater.go
db/models/: bookmark.go  category.go  postType.go  user.go  vacancy.go
handlers/bookmark/: delete.go  getAll.go  getByUser.go  getByVacancy.go
handlers/importer/: import.go
handlers/post/: getAll.go  upgrade.go
handlers/post/comment/: create.go  update.go
handlers/post/postType/: create.go  upgrade.go
handlers/resume/: create.go  upgrade.go
handlers/secureCheck/: secure.go
handlers/upload/: upload.go
handlers/user/: create.go
handlers/vacancy/: getAll.go
handlers/vacancy/category/: create.go  upgrade.go
handlers/vacancy/request/: create.go  getByUser.go
ilimgroup_jobs/: README.md  flutter_native_splash.yaml  pubspec.yaml
ilimgroup_jobs/android/app/: build.gradle
ilimgroup_jobs/lib/: main.dart
ilimgroup_jobs/test/: widget_test.dart
ilimgroup_jobs/web/: index.html  manifest.json
ilimgroup_jobs/windows/: CMakeLists.txt
ilimgroup_jobs/winuwp/: CMakeLists.txt
server/: .envexample  go.mod  go.sum  insomnia.json  main.go
server/conf/: jwt.go
server/db/: schemeUpdater.go
(+121 files in other folders)
